<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nickwelna.musicalstructure.LibraryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/description_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SongNavigation"
                android:text="@string/song_1" />

            <View style="@style/DividerTheme" />

            <TextView
                style="@style/SongNavigation"
                android:text="@string/song_2" />

            <View style="@style/DividerTheme" />

            <TextView
                style="@style/SongNavigation"
                android:text="@string/song_3" />

            <View style="@style/DividerTheme" />

            <TextView
                style="@style/SongNavigation"
                android:text="@string/song_4" />

            <View style="@style/DividerTheme" />

            <TextView
                style="@style/SongNavigation"
                android:text="@string/song_5" />

            <View style="@style/DividerTheme" />

            <TextView
                style="@style/SongNavigation"
                android:text="@string/song_6" />

            <View style="@style/DividerTheme" />

            <TextView
                style="@style/SongNavigation"
                android:text="@string/song_7" />

            <View style="@style/DividerTheme" />

            <TextView
                style="@style/SongNavigation"
                android:text="@string/song_8" />

            <View style="@style/DividerTheme" />

            <TextView
                style="@style/SongNavigation"
                android:text="@string/song_9" />

            <View style="@style/DividerTheme" />

            <TextView
                style="@style/SongNavigation"
                android:text="@string/song_10" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@id/description_title"
        style="@style/DescriptionLabelStyle"
        android:layout_above="@+id/screen_description"
        android:text="@string/your_library_screen_label" />

    <TextView
        android:id="@id/screen_description"
        style="@style/DescriptionStyle"
        android:text="@string/your_library_screen_description" />

</RelativeLayout>
