<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nickwelna.musicalstructure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/now_playing_text"
            style="@style/Navigation"
            android:text="@string/now_playing_name" />

        <View style="@style/DividerTheme" />

        <TextView
            android:id="@+id/your_library_text"
            style="@style/Navigation"
            android:text="@string/your_library_name" />

        <View style="@style/DividerTheme" />

        <TextView
            android:id="@+id/store_text"
            style="@style/Navigation"
            android:text="@string/store_name" />
    </LinearLayout>

    <TextView
        style="@style/DescriptionLabelStyle"
        android:layout_above="@+id/screen_description"
        android:text="@string/main_landing_screen_label" />

    <TextView
        android:id="@id/screen_description"
        style="@style/DescriptionStyle"
        android:text="@string/main_landing_screen_description" />

</RelativeLayout>
