<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nickwelna.musicalstructure.NowPlayingActivity">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/controls"
        android:layout_marginBottom="@dimen/padding_top_bottom"
        android:layout_marginTop="@dimen/padding_top_bottom">

        <ImageView
            style="@style/AlbumCoverStyle"
            android:contentDescription="@string/album_cover_description"
            android:src="@drawable/fake_album_cover"
            app:layout_widthPercent="70%" />

    </android.support.percent.PercentRelativeLayout>

    <RelativeLayout
        android:id="@id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/description_title"
        android:layout_marginEnd="@dimen/padding_start_end"
        android:layout_marginStart="@dimen/padding_start_end">

        <RelativeLayout
            android:id="@+id/fake_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/library"
                style="@style/ControlsStyle"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/previous_song_description"
                android:src="@drawable/ic_list_black_24dp" />

            <TextView
                style="@style/SongDescriptionStyle"
                android:layout_centerVertical="true"
                android:text="@string/fake_song_information" />

            <ImageView
                android:id="@+id/store"
                style="@style/ControlsStyle"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/previous_song_description"
                android:src="@drawable/ic_shopping_cart_black_24dp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fake_info"
            android:gravity="center">

            <ImageView
                android:id="@+id/previous"
                style="@style/ControlsStyle"
                android:contentDescription="@string/previous_song_description"
                android:src="@drawable/ic_skip_previous_black_24dp" />

            <ImageView
                android:id="@+id/play"
                style="@style/ControlsStyle"
                android:layout_toEndOf="@id/previous"
                android:contentDescription="@string/play_button_description"
                android:src="@drawable/ic_play_arrow_black_24dp" />

            <ImageView
                android:id="@+id/next"
                style="@style/ControlsStyle"
                android:layout_toEndOf="@id/play"
                android:contentDescription="@string/next_song_description"
                android:src="@drawable/ic_skip_next_black_24dp" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@id/description_title"
        style="@style/DescriptionLabelStyle"
        android:layout_above="@+id/screen_description"
        android:text="@string/now_playing_screen_label" />

    <TextView
        android:id="@id/screen_description"
        style="@style/DescriptionStyle"
        android:text="@string/now_playing_screen_description" />

</RelativeLayout>
